--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -1,27 +1,23 @@
 +++
-title = "Goldydocs"
-linkTitle = "Goldydocs"
+title = "Catalyst-Swarm"
+linkTitle = "Catalyst-Swarm"
 
 +++
 
-{{< blocks/cover title="Welcome to Goldydocs: A Docsy Example Project!" image_anchor="top" height="full" color="orange" >}}
+{{< blocks/cover title="The Catalyst-Swarm" image_anchor="top" height="full" color="orange" >}}
 <div class="mx-auto">
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
 		Learn More <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
-	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://github.com/google/docsy-example">
-		Download <i class="fab fa-github ml-2 "></i>
-	</a>
-	<p class="lead mt-5">Porridge temperature assessment - in the cloud!</p>
+	<p class="lead mt-5">We are a respectful revolution, a silent evolution, we are everyone and no one, we are  everywhere and nowhere.</p>
 	{{< blocks/link-down color="info" >}}
 </div>
 {{< /blocks/cover >}}
 
 
 {{% blocks/lead color="primary" %}}
-Goldydocs provides a single web UI providing visibility into porridge temperature, chair size, and bed softness metrics! You can even find out who's been eating **your** porridge.
-
-(Sadly, Goldydocs isn't a real project, but you can use this site as an example to create your own real websites with [Docsy](http://docsy.dev))
+Swarm is everybody who identifies with the vision to share ideas, visions and ambitions and to collaborate on building the future society of Cardano. 
+We are representatives of the idea of an open, inclusive and diverse network of doers and visionairs, working hand in hand to add value to the Cardano Ecosystem
 {{% /blocks/lead %}}
 
 {{< blocks/section color="dark" >}}
