--- a/content/en/about/_index.html
+++ b/content/en/about/_index.html
@@ -1,5 +1,5 @@
 ---
-title: About Goldydocs
+title: About Swarm
 linkTitle: About
 menu:
   main:
@@ -8,22 +8,35 @@ menu:
 ---
 
 
-{{< blocks/cover title="About Goldydocs" image_anchor="bottom" height="min" >}}
+{{< blocks/cover title="The Swarm" image_anchor="bottom" height="min" >}}
 
-<p class="lead mt-5">A sample site using the Docsy Hugo theme.
+<p class="lead mt-5">Envision Decentralized Society.
 </p>
 
 {{< /blocks/cover >}}
 
 {{% blocks/lead %}}
-Goldydocs is a sample site using the <a href="https://github.com/google/docsy">Docsy</a> Hugo theme that shows what it can do and provides you with a template site structure. It’s designed for you to clone and edit as much as you like. See the different sections of the documentation and site for more ideas.
-{{% /blocks/lead %}}
+We are a respectful revolution, a silent evolution, we are everyone and no one, we are everywhere and nowhere.
+ {{% /blocks/lead %}}
 
 
 {{< blocks/section >}}
 <div class="col-12">
 <h1 class="text-center">This is another section</h1>
 </div>
+
+
+Swarm is everybody who identifies with the vision to share ideas, visions and ambitions and to collaborate on building the future society of Cardano. We are representatives of the idea of an open, inclusive and diverse network of doers and visionairs, working hand in hand to add value to the Cardano Ecosystem
+
+Cyberspace consists of transactions, relationships, and thought itself, arrayed like a standing wave in the web of our communications. Ours is a world that is both everywhere and nowhere, but it is not where bodies live.
+
+We are creating spaces that all may enter without privilege or prejudice accorded by race, economic power, military force, or station of birth.
+
+We are exploring a world where anyone, anywhere may express his or her beliefs, no matter how singular, without fear of being coerced into silence or conformity. 
+
+We create a civilization and Society of the Mind in Cyberspace. May it be more humane and fair than the world our governments have made before.
+
+Inspired by by John Perry Barlow & The Electronic Frontier Foundation
 
 {{< /blocks/section >}}
 
