--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -16,8 +16,18 @@ linkTitle = "Catalyst-Swarm"
 
 
 {{% blocks/lead color="primary" %}}
-Swarm is everybody who identifies with the vision to share ideas, visions and ambitions and to collaborate on building the future society of Cardano. 
-We are representatives of the idea of an open, inclusive and diverse network of doers and visionairs, working hand in hand to add value to the Cardano Ecosystem
+Swarm is everybody who identifies with the vision to share ideas, visions and ambitions and to collaborate on building the future society of Cardano. We are representatives of the idea of an open, inclusive and diverse network of doers and visionairs, working hand in hand to add value to the Cardano Ecosystem
+
+Cyberspace consists of transactions, relationships, and thought itself, arrayed like a standing wave in the web of our communications. Ours is a world that is both everywhere and nowhere, but it is not where bodies live.
+
+We are creating spaces that all may enter without privilege or prejudice accorded by race, economic power, military force, or station of birth.
+
+We are exploring a world where anyone, anywhere may express his or her beliefs, no matter how singular, without fear of being coerced into silence or conformity. 
+
+We create a civilization and Society of the Mind in Cyberspace. May it be more humane and fair than the world our governments have made before.
+
+Inspired by by John Perry Barlow & [The Electronic Frontier Foundation](https://www.eff.org/)
+
 {{% /blocks/lead %}}
 
 {{< blocks/section color="dark" >}}
