--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -17,9 +17,9 @@ linkTitle = "Catalyst-Swarm"
 
 {{% blocks/lead color="white" %}}
 	
-<h1>THE CATALYST SWARM</h1>
-<h1>WE ARE A RESPECTFUL REVOLUTION, A SILENT EVOLUTION</h1>
-<h1>WE ARE EVERYONE AND NOONE , WE ARE EVERYWHERE AND NOWHERE</h1>
+<h1>The Catalyst Swarm</h1>
+<h1>We are a respectful revolution, a silent evolution</h1>
+<h1>We are everyone and no one, we are everywhere and nowhere.</h1>
 	
 Swarm is everybody who identifies with the vision to share ideas, visions and ambitions and to collaborate on building the future society of Cardano. We are representatives of the idea of an open, inclusive and diverse network of doers and visionairs, working hand in hand to add value to the Cardano Ecosystem
 
