--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -36,20 +36,19 @@ Inspired by by John Perry Barlow & [The Electronic Frontier Foundation](https://
 {{% /blocks/lead %}}
 
 {{< blocks/section color="dark" >}}
-{{% blocks/feature icon="fa-lightbulb" title="New chair metrics!" %}}
-The Goldydocs UI now shows chair size metrics by default.
+	
+{{< blocks/section color="dark" >}}
+{{% blocks/feature icon="fa-youtube" title="YouTube" url="https://www.youtube.com/channel/UCuXdR8JMH0QriU0uOTVpg3w/videos"%}}
+For After Town Hall and Saturday Swarm Session content.
+{{% /blocks/feature %}}
 
-Please follow this space for updates!
+{{% blocks/feature icon="fab fa-github" title="Contributions welcome!" url="https://github.com/Catalyst-Swarm" %}}
+New users are always welcome!
 {{% /blocks/feature %}}
 
 
-{{% blocks/feature icon="fab fa-github" title="Contributions welcome!" url="https://github.com/google/docsy-example" %}}
-We do a [Pull Request](https://github.com/google/docsy-example/pulls) contributions workflow on **GitHub**. New users are always welcome!
-{{% /blocks/feature %}}
-
-
-{{% blocks/feature icon="fab fa-twitter" title="Follow us on Twitter!" url="https://twitter.com/docsydocs" %}}
-For announcement of latest features etc.
+{{% blocks/feature icon="fab fa-twitter" title="Follow us on Twitter!" url="https://twitter.com/CatalystSwarm" %}}
+For announcements and latest news.
 {{% /blocks/feature %}}
 
 
