--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -21,6 +21,9 @@ linkTitle = "Catalyst-Swarm"
 <h1>We are a respectful revolution, a silent evolution</h1>
 <h1>We are everyone and no one, we are everywhere and nowhere.</h1>
 	
+{{< youtube mvLAOY8tzFI >}}
+	
+	
 Swarm is everybody who identifies with the vision to share ideas, visions and ambitions and to collaborate on building the future society of Cardano. We are representatives of the idea of an open, inclusive and diverse network of doers and visionairs, working hand in hand to add value to the Cardano Ecosystem
 
 Cyberspace consists of transactions, relationships, and thought itself, arrayed like a standing wave in the web of our communications. Ours is a world that is both everywhere and nowhere, but it is not where bodies live.
@@ -38,7 +41,7 @@ Inspired by by John Perry Barlow & [The Electronic Frontier Foundation](https://
 {{< blocks/section color="dark" >}}
 	
 {{< blocks/section color="dark" >}}
-{{% blocks/feature icon="fa-youtube" title="YouTube" url="https://www.youtube.com/channel/UCuXdR8JMH0QriU0uOTVpg3w/videos"%}}
+{{% blocks/feature icon="fa fa-youtube" title="YouTube" url="https://www.youtube.com/channel/UCuXdR8JMH0QriU0uOTVpg3w/videos"%}}
 For After Town Hall and Saturday Swarm Session content.
 {{% /blocks/feature %}}
 
