--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -23,6 +23,9 @@ linkTitle = "Catalyst-Swarm"
 	
 {{< youtube mvLAOY8tzFI >}}
 	
+{{% /blocks/lead %}}
+	
+{{% blocks/lead color="white" %}}
 	
 Swarm is everybody who identifies with the vision to share ideas, visions and ambitions and to collaborate on building the future society of Cardano. We are representatives of the idea of an open, inclusive and diverse network of doers and visionairs, working hand in hand to add value to the Cardano Ecosystem
 
