--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -15,14 +15,15 @@ linkTitle = "Catalyst-Swarm"
 {{< /blocks/cover >}}
 
 
-{{% blocks/lead color="white" %}}
-	
+{{% blocks/lead color="white" %}}	
 <h1>The Catalyst Swarm</h1>
 <h1>We are a respectful revolution, a silent evolution</h1>
 <h1>We are everyone and no one, we are everywhere and nowhere.</h1>
+{{% /blocks/lead %}}
 	
-{{< youtube mvLAOY8tzFI >}}
 	
+{{% blocks/lead color="white" %}}	
+{{< youtube mvLAOY8tzFI >}}	
 {{% /blocks/lead %}}
 	
 {{% blocks/lead color="white" %}}
