--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -22,9 +22,9 @@ linkTitle = "Catalyst-Swarm"
 {{% /blocks/lead %}}
 	
 	
-{{% blocks/lead color="white" %}}	
+{{< blocks/section color="dark" >}}	
 {{< youtube mvLAOY8tzFI >}}	
-{{% /blocks/lead %}}
+{{< /blocks/section >}}
 	
 {{% blocks/lead color="white" %}}
 	
