--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -26,7 +26,7 @@ linkTitle = "Catalyst-Swarm"
 {{< youtube mvLAOY8tzFI >}}	
 {{< /blocks/section >}}
 	
-{{% blocks/lead color="white" %}}
+{{% blocks/lead color="dark" %}}
 	
 Swarm is everybody who identifies with the vision to share ideas, visions and ambitions and to collaborate on building the future society of Cardano. We are representatives of the idea of an open, inclusive and diverse network of doers and visionairs, working hand in hand to add value to the Cardano Ecosystem
 
@@ -41,9 +41,8 @@ We create a civilization and Society of the Mind in Cyberspace. May it be more h
 Inspired by by John Perry Barlow & [The Electronic Frontier Foundation](https://www.eff.org/)
 
 {{% /blocks/lead %}}
-
-{{< blocks/section color="dark" >}}
 	
+
 {{< blocks/section color="dark" >}}
 {{% blocks/feature icon="fa fa-youtube" title="YouTube" url="https://www.youtube.com/channel/UCuXdR8JMH0QriU0uOTVpg3w/videos"%}}
 For After Town Hall and Saturday Swarm Session content.
