--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -21,11 +21,6 @@ linkTitle = "Catalyst-Swarm"
 <h1>We are everyone and no one, we are everywhere and nowhere.</h1>
 {{% /blocks/lead %}}
 	
-	
-{{< blocks/section color="dark" >}}	
-{{< youtube mvLAOY8tzFI >}}	
-{{< /blocks/section >}}
-	
 {{% blocks/lead color="dark" %}}
 	
 Swarm is everybody who identifies with the vision to share ideas, visions and ambitions and to collaborate on building the future society of Cardano. We are representatives of the idea of an open, inclusive and diverse network of doers and visionairs, working hand in hand to add value to the Cardano Ecosystem
@@ -44,7 +39,7 @@ Inspired by by John Perry Barlow & [The Electronic Frontier Foundation](https://
 	
 
 {{< blocks/section color="dark" >}}
-{{% blocks/feature icon="fa fa-youtube" title="YouTube" url="https://www.youtube.com/channel/UCuXdR8JMH0QriU0uOTVpg3w/videos"%}}
+{{% blocks/feature icon="fab fa-youtube" title="YouTube" url="https://www.youtube.com/channel/UCuXdR8JMH0QriU0uOTVpg3w/videos"%}}
 For After Town Hall and Saturday Swarm Session content.
 {{% /blocks/feature %}}
 
