--- a/content/en/events/_index.html
+++ b/content/en/events/_index.html
@@ -10,8 +10,11 @@ menu:
 
 {{< blocks/cover title="The Swarm" image_anchor="bottom" height="min" >}}
 
-<p class="lead mt-5">Envision Decentralized Society.
+<p class="lead mt-5">Places to connect people and ideas
 </p>
+ <p class="lead mt-5">Cardano & Catalyst Sessions, Workshops & Events
+</p>
+  
 
 {{< /blocks/cover >}}
 
