--- a/content/en/events/_index.html
+++ b/content/en/events/_index.html
@@ -8,19 +8,19 @@ menu:
 ---
 
 
-{{< blocks/cover title="The Swarm" image_anchor="bottom" height="min" >}}
+{{< blocks/cover title="Places to connect people and ideas" image_anchor="bottom" height="min" >}}
 
-<p class="lead mt-5">Places to connect people and ideas
-</p>
- <p class="lead mt-5">Cardano & Catalyst Sessions, Workshops & Events
+<p class="lead mt-5">Cardano & Catalyst Sessions, Workshops & Events
 </p>
   
-
 {{< /blocks/cover >}}
 
 {{% blocks/lead %}}
-We are a respectful revolution, a silent evolution, we are everyone and no one, we are everywhere and nowhere.
- {{% /blocks/lead %}}
+
+Maybe it’s wrong to speak about Sessions or Events as this could give you a wrong image of what it is about on its very basis… The main goal of these gatherings is to explore and offer places for the community to meet and to connect.. to establish relationships on which later collaboration and amazing projects start to evolve. It also serves as a very inclusive way to allow new people, joining the community ,to get an idea of what it is all about. To find the right people for the right answers to the right questions.
+
+Feel free to join and to meet the Community
+{{% /blocks/lead %}}
 
 
 {{< blocks/section >}}
