--- a/content/en/events/_index.html
+++ b/content/en/events/_index.html
@@ -28,7 +28,8 @@ Feel free to join and to meet the Community
 <h1 class="text-center">Each Wednesday at 18:00 UTC - Town Hall by IOHK</h1>
 </div>
 
-Join Daniel Ribar (Community Manager) and the rest of the community for our weekly Catalyst update. Want go get an impression on Town Hall ? Check all recordings [HERE](https://www.youtube.com/playlist?list=PLnPTB0CuBOByRhpTUdALq4J89m_h7QqLk)
+Join Daniel Ribar (Community Manager) and the rest of the community for our weekly Catalyst update. Want go get an impression on Town Hall ? 
+Check all recordings (HERE)[https://www.youtube.com/playlist?list=PLnPTB0CuBOByRhpTUdALq4J89m_h7QqLk]
 
 Right after, The Catalyst Swarm After Town Hall opens the floor. Join Community hosted breakout rooms and participate in meaningful discussion, workshops and sessions all around Cardano and Project Catalyst. 
 
@@ -39,7 +40,8 @@ Right after, The Catalyst Swarm After Town Hall opens the floor. Join Community 
 {{< blocks/section >}}
 
 <div class="col-12">
-<h1 class="text-center">This is another section</h1>
+<h1 class="text-center">Each 2nd Saturday at 09:00 UTC - Eastern Town Hall</h1>
 </div>
-
+Join the weekly meetings of the  Cardano Communities from the Eastern Hemisphere and meet people and projects from Australia, Indonesia, Japan, New Zealand and Vietnam. 
+The Breakout rooms are hosted in local languages to offer an multilingual and open floor to people from various countries
 {{< /blocks/section >}}
