--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -1,10 +1,10 @@
 +++
-title = "Catalyst-Swarm"
-linkTitle = "Catalyst-Swarm"
+title = "Catalyst Swarm"
+linkTitle = "Catalyst Swarm"
 
 +++
 
-{{< blocks/cover title="The Catalyst-Swarm" image_anchor="top" height="full" color="orange" >}}
+{{< blocks/cover title="The Catalyst Swarm" image_anchor="top" height="full" color="orange" >}}
 <div class="mx-auto">
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
 		Learn More <i class="fas fa-arrow-alt-circle-right ml-2"></i>
